Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-94765

AnimatedSprite has glitches

    XMLWordPrintable

Details

    • Linux/X11
    • b2ad2f4d9ffe67014d4b6048d183e997bf1911c1 (qt/qtdeclarative/6.2) 55d3b35c59b173ac6d559b1b74c405af1aa793ff (qt/qtdeclarative/dev) e06fbc85ddacc193b16dc8eee1007f7e7d5d3c80 (qt/tqtc-qtdeclarative/5.15)

    Description

      Please run the attached code with 5.15.5 or 5.12.11 and you will see glitches of the animation around frame 21.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vgt Eirik Aavitsland
            karimpinter Karim Pinter (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes